--- a/git.html
+++ b/git.html
@@ -10,6 +10,10 @@
     <h1>m1</h1>
     <h2>m2</h2>
     <h3>m3</h3>
-    <p>create new branch b1</p>
+    <p>create new branch b1 
+        <span>commit b1- m1</span>
+        <span>commit b1-m2</span>
+    </p>
+
 </body>
 </html>
