--- a/git.html
+++ b/git.html
@@ -11,5 +11,8 @@
     <h2>m2</h2>
     <h3>m3</h3>
     <h4>m4</h4>
+    <div>create new branch b2
+        <span>b2-m1</span>
+    </div>
 </body>
 </html>
