--- a/git.html
+++ b/git.html
@@ -13,6 +13,7 @@
     <h4>m4</h4>
     <div>create new branch b2
         <span>b2-m1</span>
+        <span>b2-m2</span>
     </div>
 </body>
 </html>
